# web-data-collection-gcs

./: .gitignore  README.md
cloud-functions/saver/: .gcloudignore  deployment.sh  index.js  index.js.backup  package.json  test-upload.html  test.txt
gcs-to-supabase-sync/: main.py  requirements.txt
km_headless_testbed/: index.html
netlify/functions/: saver.js
pages/fake_pages/Facebook-Clone/: index.html  script.js  style.css  user.html
pages/fake_pages/instagram-clone/: index.html  script.js
pages/fake_pages/twitter-clone/: index.html  script.js  styles.css
pages/hosting/: complete.html  consent.html  debug-userid.html  debug-userid2.html  demographics.html  instructions.html  mturk-Design-Layout.html  start_study.html  survey-code.html  tasks.html
scripts/: tasks-controller.js
styles/: global.css
utils/: common.js  common.js.backup  wasm-keystroke.js
wasm-keystroke-capture/: Cargo.toml
wasm-keystroke-capture/pkg/: keystroke_capture.d.ts  keystroke_capture.js  keystroke_capture_bg.wasm  keystroke_capture_bg.wasm.d.ts  package.json
wasm-keystroke-capture/src/: lib.rs
