[package]
name = "keystroke-capture"
version = "0.1.0"
authors = ["Your Name"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Performance", "Window"] }
js-sys = "0.3"

[profile.release]
# Optimize for small binary size
opt-level = "z"
lto = true

